<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.dogsontherun.pocketpupv2.Home">
      <item android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:orderInCategory="100"
            app:showAsAction="never"/>


      <item android:id="@+id/action_home"
            android:title="@string/action_home"
            android:orderInCategory="1"
            app:showAsAction="never"/>

      <item android:id="@+id/action_my_account"
            android:title="@string/action_my_account"
            android:orderInCategory="2"
            app:showAsAction="never"/>

    <item android:id="@+id/action_my_pets"
          android:title="@string/title_my_pets"
          android:orderInCategory="3"
          app:showAsAction="ifRoom"/>

      <item android:id="@+id/action_sign_in"
            android:title="@string/action_sign_in"
            android:orderInCategory="20"
            app:showAsAction="never"/>

      <item android:id="@+id/action_log_out"
            android:title="@string/action_log_out"
            android:orderInCategory="21"
            app:showAsAction="never"/>

</menu>